Fix:ユーザー招待機能の修正

--- a/app/views/groups/_posts.html.erb
+++ b/app/views/groups/_posts.html.erb
@@ -16,7 +16,9 @@
     <% end %>
   <% end %>
 <% else %>
-  <div class="card rounded-box flex-col bg-white shadow-xl w-full my-8">
-    <%= t '.no_post' %>
+  <div class="card rounded-box bg-white shadow-xl w-full mt-4 p-4">
+    <div class="pl-6">
+      <%= t '.no_post' %>
+    </div>
   </div>
 <% end %>
