--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,12 +1,15 @@
 <% content_for(:title, @group.name) %>
 <div class="flex flex-col p-4 md:flex-row md:p-8 flex-auto max-w-6xl mx-auto">
   <div class="flex flex-col md:w-1/3">
+    <h2 class="title-font text-lg font-semibold text-neutral-900"><%= t '.group_name' %></h2>
     <div class="card p-4 bg-primary bg-opacity-50">
       <h2 class="title-font text-2xl font-semibold text-neutral-900"><%= @group.name %></h2>
-      <div class="text-right">
-        <%= link_to (t '.edit'), edit_group_path(@group), class:"btn btn-info btn-sm" %>
-        <%= link_to (t '.delete'), group_path(@group), class:"btn btn-error btn-sm", data: { turbo_method: :delete, confirm: t("defaults.delete_confirm") }  %>
-      </div>
+      <% if @group.group_admin?(current_user) %>
+        <div class="text-right">
+          <%= link_to (t '.edit'), edit_group_path(@group), class:"btn btn-info btn-sm" %>
+          <%= link_to (t '.delete'), group_path(@group), class:"btn btn-error btn-sm", data: { turbo_method: :delete, confirm: t("defaults.delete_confirm") }  %>
+        </div>
+      <% end %>
     </div>
     <div class="card rounded-box flex-grow place-items-center bg-white shadow-xl mt-4">
       <div class="w-full p-4">
@@ -35,7 +38,7 @@
             <h2 class="title-font text-lg font-semibold text-neutral-900"><%= t '.member' %></h2>
             <% if @group.users.present? %>
               <% @group.users.each do |user| %>
-                <div class="flex flex-row items-center p-4 text-left md:text-left border border-primary rounded-lg">
+                <div class="flex flex-row items-center p-4 text-left md:text-left border border-primary rounded-lg mb-2">
                   <div class="avatar">
                     <div class="h-12 w-12 rounded-full">
                       <%= image_tag user.image %>
@@ -51,10 +54,12 @@
                 <%= t '.no_group' %>
               </div>
             <% end %>
-            <div class="text-left py-4">
-              <p class="font-semibold"><%= t '.invite' %></p>
-              <div class="line-it-button" data-lang="ja" data-type="share-a" data-env="REAL" data-url="https://liverlog.fly.dev/invitees/invitation/new/<%= @group.invite_token %>" data-color="default" data-size="large" data-count="false" data-ver="3" style="display: none;"></div>
-            </div>
+            <% if @group.group_admin?(current_user) %>
+              <div class="text-left py-4">
+                <p class="font-semibold"><%= t '.invite' %></p>
+                <div class="line-it-button" data-lang="ja" data-type="share-a" data-env="REAL" data-url="https://0da4-2400-4052-6960-9b00-a4b4-fc11-952a-f241.ngrok-free.app/invitees/invitation/new/<%= @group.invite_token %>" data-color="default" data-size="large" data-count="false" data-ver="3" style="display: none;"></div>
+              </div>
+            <% end %>
           </div>
         </div>
       </div>
