--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,9 @@
     <ul class="menu menu-horizontal invisible px-1 md:visible">
       <li><a><%= t 'defaults.community' %></a></li>
     </ul>
-    <%= link_to t('defaults.record'), new_drink_record_path, class: 'btn btn-accent', data: { turbo: false } %>
+    <% if current_user.general? %>
+      <%= link_to t('defaults.record'), new_drink_record_path, class: 'btn btn-accent', data: { turbo: false } %>
+    <% end %>
     <div class="dropdown dropdown-end">
       <div class="flex-none">
         <label tabindex="0" class="btn btn-ghost btn-circle avatar mx-4">
@@ -15,9 +17,15 @@
           </div>
         </label>
         <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-32">
-          <li>
-            <%= link_to t('defaults.my_page'), profile_path %>
-          </li>
+          <% if current_user.general? %>
+            <li>
+              <%= link_to t('defaults.my_page'), profile_path %>
+            </li>
+          <% elsif current_user.invitee? %>
+            <li>
+              <%= link_to t('defaults.group'), group_path(current_user.groups.first) %>
+            </li>
+          <% end %>
           <li class="md:hidden"><a><%= t 'defaults.community' %></a></li>
         </ul>
       </div>
