--- a/app/views/shared/_like_btn.html.erb
+++ b/app/views/shared/_like_btn.html.erb
@@ -1,8 +1,10 @@
 <div class="divider"></div>
 <ul class='crud-menu-btn list-none'>
-  <li class="inline-block mr-2">
-    <%= link_to '#', id: "button-like-#{post.id}" do %>
-      <i class="fa-regular fa-thumbs-up fa-lg"></i>
+  <li class="inline-block mr-4">
+    <% if current_user.like_post?(post) %>
+      <%= render 'shared/unlike', { post: post } %>
+    <% else %>
+      <%= render 'shared/like', { post: post } %>
     <% end %>
     <%= post.post_likes.count %>
   </li>
