Add:LINEメッセージで休肝日を知らせる機能の追加

--- a/app/views/shared/_drink_record_summary.html.erb
+++ b/app/views/shared/_drink_record_summary.html.erb
@@ -1,4 +1,4 @@
-<div class="stats stats-vertical my-2 w-full bg-accent-content shadow md:stats-horizontal md:grid-cols-2">
+<div class="stats stats-vertical my-2 w-full bg-accent-content shadow grid-cols-2">
   <div class="stat">
     <div class="stat-title"><%= t 'defaults.no_alcohol_day_achievement' %></div>
     <div class="stat-value"><%= user.monthly_no_drink_achievement %>%</div>
