--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -57,7 +57,7 @@
             <% if @group.group_admin?(current_user) %>
               <div class="text-left py-4">
                 <p class="font-semibold"><%= t '.invite' %></p>
-                <div class="line-it-button" data-lang="ja" data-type="share-a" data-env="REAL" data-url="https://0da4-2400-4052-6960-9b00-a4b4-fc11-952a-f241.ngrok-free.app/invitees/invitation/new/<%= @group.invite_token %>" data-color="default" data-size="large" data-count="false" data-ver="3" style="display: none;"></div>
+                <div class="line-it-button" data-lang="ja" data-type="share-a" data-env="REAL" data-url="<%= Settings.page_url[:page_url] %>/invitees/invitation/new/<%= @group.invite_token %>" data-color="default" data-size="large" data-count="false" data-ver="3" style="display: none;"></div>
               </div>
             <% end %>
           </div>
