--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
     <ul class="menu menu-horizontal invisible px-1 md:visible">
       <li><a><%= t 'defaults.community' %></a></li>
     </ul>
-    <% if current_user.general? %>
+    <% if current_user.general? || current_user.admin? %>
       <%= link_to t('defaults.record'), new_drink_record_path, class: 'btn btn-accent', data: { turbo: false } %>
     <% end %>
     <div class="dropdown dropdown-end">
@@ -17,7 +17,7 @@
           </div>
         </label>
         <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-32">
-          <% if current_user.general? %>
+          <% if current_user.general? || current_user.admin? %>
             <li>
               <%= link_to t('defaults.my_page'), profile_path %>
             </li>
