--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -21,13 +21,17 @@
           </div>
         </label>
         <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-32">
+          <% if current_user.admin? %>
+            <li>
+              <%= link_to t('defaults.admin_page'), rails_admin_path %>
+            </li>
+          <% end %>
           <% if current_user.general? || current_user.admin? %>
             <li>
               <%= link_to t('defaults.my_page'), profile_path %>
             </li>
-            <li>
+            <ul>
               <%= t('defaults.group') %>
-              <ul>
                 <% if current_user.groups.exists? %>
                   <% current_user.groups.each do |group| %>
                     <% if group.persisted? %>
@@ -37,8 +41,7 @@
                     <% end %>
                   <% end %>
                 <% end %>
-              </ul>
-            </li>
+            </ul>
           <% elsif current_user.invitee? %>
             <li>
               <%= t('defaults.group') %>
