--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= javascript_importmap_tags %>
     <%= javascript_import_module_tag "controllers/alcohol_calculator" %>
     <%= javascript_import_module_tag "controllers/record_form" %>
+    <%= favicon_link_tag "favicon.ico" %>
   </head>
 
   <body>
