--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,6 +8,9 @@
   </div>
   <div class="navbar-end">
     <ul class="menu menu-horizontal invisible px-1 md:visible">
+      <li><%= link_to t('defaults.explanation'), root_path %></li>
+    </ul>
+    <ul class="menu menu-horizontal invisible px-1 md:visible">
       <li><a><%= t 'defaults.community' %></a></li>
     </ul>
     <% if current_user.general? || current_user.admin? %>
@@ -55,6 +58,9 @@
             </li>
           <% end %>
           <li class="md:hidden"><a><%= t 'defaults.community' %></a></li>
+          <li class="md:hidden">
+            <%= link_to t('defaults.explanation'), root_path %>
+          </li>
         </ul>
       </div>
     </div>
