--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,45 +1,22 @@
 <% content_for(:title, t(".title")) %>
-<div class="hero mt-12 min-h-max bg-base-100 flex-auto">
-  <div class="hero-content max-w-full text-center">
+<div class="hero bg-base-100 flex-auto min-h-full" style="background-image: url(<%= asset_path "toppage_sample.jpg" %>);">
+  <div class="hero-overlay bg-opacity-60"></div>
+  <div class="hero-content max-w-max text-center py-12">
     <div class="max-w-full">
       <h1 class="text-5xl font-bold">肝ログ</h1>
       <h2 class="text-2xl">LiverLog</h2>
       <p class="py-8">肝ログ（LiverLog）は、休肝日と飲酒日を記録することで、飲酒管理ができるサービスです。</p>
-      <%= link_to auth_at_provider_path(provider: :line), class: "inline-block text-center", id: "line-login-btn" do %>
-        <%= image_tag "btn_login_base.png" %>
+      <% if logged_in? %>
+        <%= link_to t("defaults.my_page"), profile_path, class: "btn btn-primary" %>
+      <% else %>
+        <p class="font-semibold text-lg mb-4">LINEでログインしてさっそく始めよう！</p>
+        <%= link_to auth_at_provider_path(provider: :line), class: "inline-block text-center", id: "line-login-btn" do %>
+          <%= image_tag "btn_login_base.png" %>
+        <% end %>
       <% end %>
     </div>
   </div>
 </div>
-<div class="max-w-full overflow-hidden bg-base-100 py-12 sm:py-24">
-  <div class="mx-8 max-w-full rounded-xl bg-white p-6 shadow-xl lg:p-8">
-    <div class="mb-6 text-center lg:mb-8">
-      <h2 class="text-base font-semibold leading-7 text-primary">For you who want to drink in moderation</h2>
-      <p class="mt-2 text-3xl font-bold tracking-tight text-neutral-900 sm:text-4xl">健康を意識して適度に飲酒したいあなたへ</p>
-      <p class="mt-6 text-lg leading-8 text-neutral-600">肝ログは、日常の飲酒習慣を管理し、健康的な飲酒生活をサポートするできるようなサービスです</p>
-    </div>
-    <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2">
-      <div class="lg:pr-8 lg:pt-4">
-        <div class="lg:max-w-full">
-          <dl class="max-w-full space-y-5 text-base leading-7 text-neutral-600 lg:max-w-none">
-            <h2 class="mt-2 text-2xl font-bold tracking-tight text-neutral-900 sm:text-lg">主な機能</h2>
-            <div>
-              <dt class="font-semibold text-neutral-900">休肝日&飲酒記録の登録</dt>
-              <dd class="pl-6">簡単に休肝日または飲酒日を記録できます</dd>
-              <dd class="pl-6">入力したお酒の量（ml）、アルコール度数（%）から、アルコール摂取量を自動で計算できます</dd>
-            </div>
-            <div>
-              <dt class="font-semibold text-neutral-900">休肝日のリマインダー機能</dt>
-              <dd class="pl-6">あらかじめ登録された休肝日にLINEでリマインダーを送ります</dd>
-            </div>
-            <div>
-              <dt class="font-semibold text-neutral-900">友人や家族と休肝日&飲酒記録の共有機能</dt>
-              <dd class="pl-6">友人や家族と休肝日と飲酒記録の共有し、あなたの飲酒状況を見守れます</dd>
-            </div>
-          </dl>
-        </div>
-      </div>
-      <%= image_tag "toppage_sample.jpg", class: "m-auto w-[48rem] max-w-full rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-[57rem] md:-ml-4 lg:-ml-0" %>
-    </div>
-  </div>
+<div class="max-w-full overflow-hidden bg-base-100">
+  <%= render "static_pages/explanation" %>
 </div>
