--- a/app/views/drink_records/show.html.erb
+++ b/app/views/drink_records/show.html.erb
@@ -13,51 +13,20 @@
         <div class="btn btn-secondary btn-active btn-outline join-item m-4 px-12" type="radio" name="drink_record[:record_type]"><%= t 'defaults.alcohol_day' %></div>
       <% end %>
     </div>
-    <div class="mx-8 border-b-2 font-semibold">詳細</div>
-    <div class="m-8">
+    <div class="md:p-8 p-4">
       <div class="form-control mb-4 flex w-full flex-row items-center">
-        <label class="label mr-8 w-44"><%= DrinkRecord.human_attribute_name(:start_time) %></label>
+        <label class="label md:mr-8 md:w-44 mr-4 w-24"><%= DrinkRecord.human_attribute_name(:start_time) %></label>
         <div class="font-semibold"><%= @drink_record.start_time.strftime("%Y年 %m月 %d日(%a)") %></div>
       </div>
-      <div class="form-control mb-4 flex w-full flex-row items-center">
-        <label class="label mr-8 w-44"><%= DrinkRecord.human_attribute_name(:drink_type) %></label>
-        <div class="font-semibold"><%= @drink_record.drink_type %></div>
-      </div>
-      <div class="form-control mb-4 flex w-full flex-row items-center">
-        <label class="label mr-8 w-44"><%= DrinkRecord.human_attribute_name(:drink_volume) %></label>
-        <div class="flex flex-row items-center">
-          <div class="font-semibold"><%= @drink_record.drink_volume %></div>
-          <div class="ml-4 font-semibold">ml</div>
-        </div>
-      </div>
-      <div class="form-control mb-4 flex w-full flex-row items-center">
-        <label class="label mr-8 w-44"><%= DrinkRecord.human_attribute_name(:alcohol_percentage) %></label>
-        <div class="flex flex-row items-center">
-          <div class="font-semibold"><%= @drink_record.alcohol_percentage %></div>
-          <div class="ml-4 font-semibold">%</div>
-        </div>
-      </div>
-      <div class="form-control mb-4 flex w-full flex-row items-center">
-        <label class="label mr-8 w-44 font-semibold"><%= t 'defaults.amount_of_alcohol' %></label>
-        <div class="flex flex-row items-center">
-          <div class="font-semibold"><%= alcohol_caluculate(@drink_record.drink_volume, @drink_record.alcohol_percentage) %></div>
-          <div class="ml-4 font-semibold">g</div>
-        </div>
-      </div>
-      <div class="form-control mb-4 flex w-full flex-row items-center">
-        <label class="label mr-8 w-44"><%= DrinkRecord.human_attribute_name(:price) %></label>
-        <div class="flex flex-row items-center">
-          <div class="font-semibold"><%= @drink_record.price %></div>
-          <div class="ml-4 font-semibold">円</div>
-        </div>
-      </div>
-      <% if @drink_record.user == current_user %>
-        <div class="card-actions justify-end">
-          <%= link_to t('defaults.edit'), edit_drink_record_path, class: "btn btn-primary" %>
-          <%= link_to t('defaults.delete'), drink_record_path, class: "btn btn-accent", data: { turbo_method: :delete, confirm: t("defaults.delete_confirm") } %>
-        </div>
-      <% end %>
     </div>
+    <% if @drink_record.user == current_user %>
+      <div class="card-actions justify-end mx-8 mb-4">
+        <% if @drink_record.drink? %>
+          <%= link_to t('defaults.add_record'), new_drink_record_path(record_id: @drink_record.id), class: "btn btn-outline btn-secondary" %>
+        <% end %>
+      </div>
+    <% end %>
+    <%= render 'detail', drink_record_details: @drink_record_details %>
   </div>
 </div>
 
