Add:コミュニティ機能の追加（ポストの一覧表示）

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -67,7 +67,7 @@
   </div>
   <div class="divider md:divider-horizontal"></div>
   <div class="flex flex-col md:w-2/3">
-    <div class="card rounded-box flex-col bg-white shadow-xl max-w-full">
+    <div class="card rounded-box flex-col bg-white shadow-xl max-w-full mb-4">
       <div class="flex w-full flex-col p-4">
         <div class="card rounded-box grid">
           <h2 class="text-xl font-semibold text-center"><%= t 'defaults.record' %></h2>
