--- a/app/views/profiles/_groups.html.erb
+++ b/app/views/profiles/_groups.html.erb
@@ -1,3 +1,3 @@
 <% user.groups.each do |group| %>
-  <%= link_to group.name, group_path(group),class: "btn btn-neutral-100 w-full", data: { turbo: false } %>
+  <%= link_to group.name, group_path(group),class: "btn btn-accent-content w-full mb-4", data: { turbo: false } %>
 <% end %>
