--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer items-center p-4 bg-gradient-to-r from-primary to-secondary text-neutral-content">
+<footer class="footer items-center p-4 bg-gradient-to-r from-primary to-secondary text-neutral-content z-10">
   <aside class="items-center grid-flow-col">
     <p>Copyright © 2024 肝ログ All right reserved</p>
   </aside> 
