--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -103,4 +103,10 @@
   .bg-opacity-for-topimage {
     background-color: rgba(255, 255, 255, 0.6);
   }
+
+  .tab:is(input[type=radio]) {
+    width: max-content;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
 }
