--- a/app/views/community_posts/_posts.html.erb
+++ b/app/views/community_posts/_posts.html.erb
@@ -1,6 +1,6 @@
-<% if group.posts.present? %>
-  <% group.posts.each do |post| %>
-    <%= link_to group_post_path(group, post), class: "flex flex-row card rounded-box bg-white shadow-xl w-full mb-4 p-4", id: "post-#{post.id}" do %>
+<% if posts.present? %>
+  <% posts.each do |post| %>
+    <%= link_to community_post_path(post), class: "flex flex-row card rounded-box bg-white shadow-xl w-full mb-4 p-4", id: "community-post-#{post.id}" do %>
       <div class="avatar">
         <div class="h-12 w-12 rounded-full">
           <%= image_tag post.user.image %>
@@ -9,7 +9,7 @@
       <div class="pl-6">
         <div class="flex flex-row">
           <div class="font-bold"><%= post.user.username %></div>
-          <div class="ml-4 text-neutral-300">記録日: <%= post.drink_record.start_time.strftime("%F") %></div>
+          <div class="ml-4 text-neutral-300">作成日: <%= post.created_at.strftime("%F") %></div>
         </div>
         <div class="text-neutral-900"><%= post.content %></div>
       </div> 
@@ -18,7 +18,7 @@
 <% else %>
   <div class="card rounded-box bg-white shadow-xl w-full mt-4 p-4">
     <div class="pl-6">
-      <%= t '.no_post' %>
+      <%= t 'defaults.no_post' %>
     </div>
   </div>
 <% end %>
