--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -4,8 +4,8 @@
   </div>
   <div class="navbar-end">
     <ul class="menu menu-horizontal invisible px-1 md:visible">
-      <li><a><%= t 'defaults.top_page' %></a></li>
-      <li><a><%= t 'defaults.community' %></a></li>
+      <li><%= link_to t('defaults.top_page'), root_path %></li>
+      <li><%= link_to t('defaults.community'), community_posts_path %></li>
     </ul>
     <%= link_to auth_at_provider_path(provider: :line), class: "inline-block" do %>
         <%= image_tag "btn_login_base.png" %>
@@ -17,8 +17,8 @@
         <i class="fa fa-bars"></i> 
       </label>
       <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-32">
-        <li><a><%= t 'defaults.top_page' %></a></li>
-        <li><a><%= t 'defaults.community' %></a></li>
+        <li><%= link_to t('defaults.top_page'), root_path %></li>
+        <li><%= link_to t('defaults.community'), community_posts_path %></li>
       </ul>
     </div>
   </div>
